--- a/IPCole/informate.html
+++ b/IPCole/informate.html
@@ -4,85 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/informate.css">
-    <link rel="icon" href="../IP2022/res/general/cybersecurity-icon-rounded.png">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Hubballi&family=Josefin+Sans:wght@400&family=League+Gothic&family=Sansita+Swashed:wght@300&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@300&family=Poppins:wght@300&family=Raleway:wght@500&display=swap');
-    </style>
+    <link rel="stylesheet" href="./styles/informate.css">
+    <link rel="icon" href="./res/general/logo-cyberstop.png">
     <title>Infórmate</title>
 </head>
 <body>
 
     <header>
-        <h1>Infórmate</h1>
-        <p>Echa un vistazo a todos los artículos preparados para ti, <a href="javascript:void(0);" onclick="window.scrollTo(0, 50000);">aquí abajo</a></p>
-        <a href="javascript:history.back()"><- Volver</a>
+        <div>
+            <div class="header-div-left">
+                <img src="./res/general/logo-cyberstop.png" alt="">
+                <h3>cyberstop</h3>
+            </div>
+            <div class="header-div-right">
+                <a href="./index.html">Página principal</a>
+            </div>
+        </div>
     </header>
 
+  <div>
     <main id="main">
 
         <a href="./articles/article-1.html" class="article">
-            <div class="image-div">
-                <img src="https://www.ocu.org/-/media/ocu/images/home/tecnologia/internet%20y%20telefonia/phishing_amazon_1600x900.jpg?rev=bed03168-f7dc-4712-ab1f-84ef451574f9&hash=6DA12DB7328338AFDC269B692BDBC8F9" alt="">
-            </div>
-            <div class="text-div">
-                <h1>La alta vulnerabilidad al phishing en Perú</h1>
+            <div class="article-div">
+                <img src="./res/informate/phishing.jpg" alt="">
+                <h4>Blog</h4>
+                <h2>La alta vulnerabilidad al phishing en el Perú</h1>
                 <p>Comprende por qué el phishing es tan común en el Perú y conoce algunas medidas básicas que deberías tomar para combatirlo.</p>
+                <h3>Lee más</h3>
             </div>
         </a>
 
         <a href="./articles/article-2.html" class="article">
-            <div class="image-div">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjqhngaGDLXS0f57A2IXcQkDYB_AurujASOg&usqp=CAU" alt="">
-            </div>
-            <div class="text-div">
-                <h1>¿Cómo evitar el suplantamiento de identidad?</h1>
+            <div class="article-div">
+                <img src="./res/informate/robo-identidad.jpg" alt="">
+                <h4>Blog</h4>
+                <h2>¿Cómo evitar el suplantamiento de identidad?</h2>
                 <p>Descubre cómo protegerte del suplantamiento de identidad con recomendaciones del MINJUS y la CONAPOC.</p>
+                <h3>Lee más</h3>
             </div>
         </a>
 
         <a href="./articles/article-3.html" class="article">
-            <div class="image-div">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNin-2kvGNaHStCYzq9g8L4F_V4qikwNbS1Q&usqp=CAU" alt="">
-            </div>
-            <div class="text-div">
-                <h1>La cruda realidad del "sexting"</h1>
+            <div class="article-div">
+                <img src="./res/informate/sexting.jpg" alt="">
+                <h4>Blog</h4>
+                <h2>La cruda realidad del "sexting"</h2>
                 <p>Entiende la razón que tenemos para considerar al sexting un gran problema social y una falla educativa.</p>
+                <h3>Lee más</h3>
             </div>
         </a>
 
         <a href="./articles/article-4.html" class="article">
-            <div class="image-div">
-                <img src="https://pymstatic.com/2036/conversions/grooming-wide.jpg" alt="">
-            </div>
-            <div class="text-div">
-                <h1>Identifica el grooming</h1>
+            <div class="article-div">
+                <img src="./res/informate/grooming.jpg" alt="">
+                <h4>Blog</h4>
+                <h2>Identifica el grooming</h2>
                 <p>Conoce las acciones que son consideradas un delito de grooming y en qué se basa este ciberdelito.</p>
+                <h3>Lee más</h3>
             </div>
         </a>
 
         <a href="./articles/article-5.html" class="article">
-            <div class="image-div">
-                <img src="https://i0.wp.com/www.altavoz.pe/media/2022/07/fraude-informatico.jpg?fit=1600%2C1000&ssl=1" alt="">
-            </div>
-            <div class="text-div">
-                <h1>¿Qué es el fraude informático?</h1>
+            <div class="article-div">
+                <img src="./res/informate/fraude-informatico.jpg" alt="">
+                <h4>Blog</h4>
+                <h2>¿Qué es el fraude informático?</h2>
                 <p>Entiende el concepto de fraude informático y conoce sus bases para tomar medidas al respecto.</p>
+                <h3>Lee más</h3>
             </div>
         </a>
 
         <a href="./articles/article-6.html" class="article">
-            <div class="image-div">
-                <img src="https://atalayar.com/sites/default/files/inline-images/hackeo-tarjetas-cr%C3%A9dito-d%C3%A9bito-estafa-internet%20%281%29.jpg" alt="">
-            </div>
-            <div class="text-div">
-                <h1>Puedes ser víctima de "carding"... y no saberlo</h1>
+            <div class="article-div">
+                <img src="./res/informate/carding.png" alt="">
+                <h4>Blog</h4>
+                <h2>Puedes ser víctima de "carding"... y no saberlo</h2>
                 <p>El "carding" puede ser cometido por diversos medios, y muchos de ellos son sigilosos. Descubre más sobre este modo de estafa.</p>
+                <h3>Lee más</h3>
             </div>
         </a>
 
     </main>
 
+    <footer>
+        <a target="_blank" href="../index.html">
+            <span>Creado por</span>
+            <h2>AM</h2>
+        </a>
+    </footer>
+  </div>  
 </body>
 </html>
