--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-  
+<main> 
     <div class="intro">
             <h2>Hola, soy</h2>
             <div class="intro-text">
@@ -178,17 +178,17 @@
             <section class="projects-left">
                 <h2 class="reveal-right">Mis<br>Proyectos <strong>+</strong></h2>
 
-                <a target="_blank" href="./YanKenPo/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/yankenpo\ mini.png');">
+                <a target="_blank" href="./YanKenPo/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/yankenpo\ mini.png'); background-size: 70%; background-color: #f4f2ef;">
                     <h3>Piedra, papel o tijeras</h3>
                 </a>
             </section>
             
             <section class="projects-right">
-                <a target="_blank" href="./IPCole/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/cyberstop\ mini.png');">
+                <a target="_blank" href="./IPCole/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/cyberstop\ mini.png'); background-size: 50%; background-color: white;">
                     <h3>CyberStop</h3>
                 </a>
 
-                <a target="_blank" href="./Luka/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/luka\ mini.png');">
+                <a target="_blank" href="./Luka/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/luka\ mini.png'); background-color: #701a65;">
                     <h3>Luka</h3>
                 </a>
 
@@ -303,7 +303,7 @@
             </div>
         </div>
     </footer>
-
+</main> 
     <script src="script.js"></script>
 </body>
 </html>
