--- a/IPCole/denuncia.html
+++ b/IPCole/denuncia.html
@@ -25,6 +25,7 @@
 
         <div id="step1" class="step">
             <h1>1. Sobre el suceso.</h1>
+            <h5>Cuéntanos lo que pasó a través de un breve cuestionario.</h5>
             <div id="quiz1" class="quiz">
                 <div>
                     <div>
@@ -33,10 +34,12 @@
                     </div>
                     <div>
                         <h4>Marca aquellas casillas que describan las consecuencias del hecho</h4>
-                        <div> <input type="checkbox"> <span>Daño económico</span> </div>
-                        <div> <input type="checkbox"> <span>Daño psicológico</span> </div>
-                        <div> <input type="checkbox"> <span>Daño emocional</span> </div>
-                        <div> <input type="checkbox"> <span>Daño familiar / social</span> </div>
+                        <div>
+                            <div> <input class="checkbox" type="checkbox"> <span>Daño económico</span> </div>
+                            <div> <input class="checkbox" type="checkbox"> <span>Daño psicológico</span> </div>
+                            <div> <input class="checkbox" type="checkbox"> <span>Daño emocional</span> </div>
+                            <div> <input class="checkbox" type="checkbox"> <span>Daño familiar / social</span> </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -44,20 +47,24 @@
 
         <div id="step2" class="step">
             <h1>2. Las pruebas.</h1>
+            <h5>Adjunta a través del botón de abajo las imágenes, vídeos y/o documentos que nos puedan ayudar a verificar el hecho. Trata de que sean lo más ligeros posible.</h5>
             <div id="quiz2" class="quiz">
                 <div>
                     <h4>Archivos subidos:</h4>
-                    <span>ejemplo.png</span>
+                    <div class="file-container">
+                        <span id="span-ejemplo">ejemplo.png - 80kB</span>
+                    </div>
                 </div>
                 <div>
                     <h4>Sube tus archivos aquí</h4>
-                    <button>Sube aquí</button>
+                    <button onclick="promptUpload()">Sube aquí</button>
                 </div>
             </div>
         </div>
 
         <div id="step3" class="step">
             <h1>3. La burocracia.</h1>
+            <h5>Completa tus datos personales para postular formal y legalmente la denuncia con la división de la PNP encargada.</h5>
             <div id="quiz3" class="quiz">
                 <div>
                     <h4>Rellena los siguientes datos para proceder con la denuncia</h4>
@@ -70,17 +77,21 @@
                 </div>
                 <div>
                     <h4>Cuando estés listo para realizar tu denuncia con toda la información provista, haz click en "Denunciar"</h4>
-                    <a onclick="showFinalMessage()">¡Denunciar!</a>
+                    <a onclick="checkCompletion()">¡Denunciar!</a>
                 </div>
             </div>
         </div>
 
     </main>
 
+    <section class="warning-message" style="display: none;">
+        
+    </section>
+
     <section class="final-message" style="display: none;">
         <h1>¡Hecho!</h1>
         <p>Gracias por colocar tu denuncia. Has dado un importante paso en solucionar el problema.</p>
-        <a href="./dashboard.html">Salir</a>
+        <a href="./index.html">Salir</a>
     </section>
 
     <footer>
