--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <h3>Luka</h3>
                 </a>
 
-                <a target="_blank" href="./ZeroRacism/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/ZR\ mini.png'); background-color: #f6f6f5;">
+                <a target="_blank" href="./ZeroRacism/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/ZR\ mini.png'); background-color: #fa8787; background-size: 40%;">
                     <h3>Zero Racism</h3>
                 </a>
 
