--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             <h2>Alejandro Manrique</h2>
         </div>
         <div class="cv-c">
-            <a target="_blank" href="./res/documents/CV Alejandro Manrique.pdf" class="cv-inv">> Mi Currículum</a>
+            <a target="_blank" href="./res/español - CV Alejandro Manrique.pdf" download="CV-Alejandro-Manrique" class="cv-inv">> Mi Currículum</a>
             <div class="cv-inv-underline"></div>
         </div>
     </footer>
