--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section class="skills-titles">
                 <h3 class="reveal-up">Mis habilidades</h3>
                 <h2 class="reveal-up">Desarrollo Web, de Apps e Interfaces</h2>
-                <a href="#skill-list" class="skills-inv reveal-up">> Mi repositorio <img src="./res/general/github-icon.png" alt=""></a>
+                <a href="https://github.com/alejo742/alejo742.github.io" class="skills-inv reveal-up">> Mi repositorio <img src="./res/general/github-icon.png" alt=""></a>
                 <div class="skills-inv-underline reveal-up"></div>
             </section>
             <section class="skills-desc">
