--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <h3 class="reveal-up">Por último</h3>
         <h2 class="reveal-up">Contáctame</h2>
         <p class="reveal-up">Si te interesa trabajar conmigo o solicitar mi ayuda en algún proyecto, ¡eres bienvenido a enviarme un correo a <a>a.manrique742@gmail</a> y hacérmelo saber!</p>
-        <a target="_blank" href="mailto:a.manrique742@gmail.com" class="contact-inv reveal-up">> Envíame un email</a>
+        <a target="_blank" href="mailto:a.manrique742@gmail.com?subject=¡Saludos!&body=¡Hola! Tu sitio web me llamó la atención y quería..." class="contact-inv reveal-up">> Envíame un email</a>
         <div class="contact-inv-underline reveal-up"></div>
     </div>
 
