--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                 <div class="reveal-up">
                     <section>
-                        <h3 id="pskill-5">Algoritmos</h3>
+                        <h3 id="pskill-5">Algorithms</h3>
                         <img src="" alt="">
                     </section>
                     <ul>
