update info & language

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Nunito:wght@200;300;400;500;600;700;800;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="">
     <title>Alejandro Manrique</title>
 </head>
 <body>
@@ -30,7 +29,7 @@
                 <h1>Alejandro<strong>.</strong> </h1>
             </div>
             <p class="main-desc">
-                A hispanic student, front-end web developer and Android mobile app developer, fluent and nearly Native in English.
+                A hispanic student, front-end web developer and Android mobile app developer.
             </p>
             <a href="#skills" class="intro-inv">> Take a look</a>
             <div class="intro-inv-underline"></div>
@@ -38,13 +37,13 @@
 
     <div id="skills" class="skills">
             <section class="skills-titles">
-                <h3 class="reveal-up">My skills</h3>
-                <h2 class="reveal-up">Web and Interface Development</h2>
-                <a href="https://github.com/alejo742/alejo742.github.io" class="skills-inv reveal-up">> My repository <img src="./res/general/github-icon.png" alt=""></a>
+                <h3 class="reveal-up">My skillset</h3>
+                <h2 class="reveal-up">Web and Mobile Development</h2>
+                <a target="_blank" href="./res/CV Alejandro Manrique.pdf" class="skills-inv reveal-up">> My CV</a>
                 <div class="skills-inv-underline reveal-up"></div>
             </section>
             <section class="skills-desc">
-                <p class="reveal-up">I specialize in building applications and web pages with friendly, interactive and responsive interfaces, although I am also capable of creating Android applications and developing algorithms in various programming languages.</p>
+                <p class="reveal-up">I specialize in building applications and web pages with friendly, interactive, and responsive interfaces. I am also capable of creating Android applications and developing algorithms.</p>
             </section>
     </div>
 
@@ -122,10 +121,8 @@
                         <img src="" alt="">
                     </section>
                     <ul>
-                        <li>Fluent - Native</li>
-                        <li>TOEFL iTP Certificate</li>
-                        <li>FCE Certificate</li>
-                        <li></li>
+                        <li>Fluent - Bilingual</li>
+                        <li>TOEFL iBT 110</li>
                     </ul>
                 </div>
             </section>
@@ -176,24 +173,44 @@
             <section class="projects-left">
                 <h2 class="reveal-right">My<br>Projects <strong>+</strong></h2>
 
+                <h5 style="font-size: 1.3rem; font-family: 'Nunito';">*Disclaimer: Most have content in my native language, Spanish</h5>
+
+                <a target="_blank" href="https://activify.netlify.app" class="project reveal-left" style="background-image: url('./res/projectMinis/activify\ mini.jpg'); background-size: 90%; background-color: white;">
+                    <h3>Activify
+                        <strong>Level: Advanced</strong>
+                    </h3>
+                </a>
+
                 <a target="_blank" href="./sudokuSolver/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/sudoku\ mini.png'); background-size: 90%; background-color: #161822;">
-                    <h3>Sudoku</h3>
+                    <h3>Sudoku
+                        <strong>Level: Intermediate</strong>
+                    </h3>
                 </a>
             </section>
             
             <section class="projects-right">
+                <a target="_blank" href="https://innovatechperu.netlify.app" class="project reveal-left" style="background-image: url('./res/projectMinis/innovatech\ mini.jpg'); background-size: 80%; background-color: black; border-top: 2px solid #02FFD9; border-left: 2px solid #02FFD9; border-right: 2px solid #754FE2; border-bottom: 2px solid #754FE2;">
+                    <h3>Innovatech
+                        <strong>Level: Intermediate</strong>
+                    </h3>
+                </a>
+
                 <a target="_blank" href="./IPCole/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/cyberstop\ mini.png'); background-size: 40%; background-color: white;">
-                    <h3>CyberStop</h3>
+                    <h3>CyberStop
+                        <strong>Level: Intermediate</strong>
+                    </h3>
                 </a>
 
                 <a target="_blank" href="./ZeroRacism/index.html" class="project reveal-left" style="background-image: url('./res/projectMinis/ZR\ mini.png'); background-color: #fa8787; background-size: 40%;">
-                    <h3>Zero Racism</h3>
+                    <h3>Zero Racism
+                        <strong>Level: Beginner</strong>
+                    </h3>
                 </a>
 
             </section>
     </div>
 
-    <div id="career" class="career">
+    <div style="display: none; visibility: none;" id="career" class="career">
             <section class="career-top">
                 <h2 class="reveal-right"><strong>|</strong> Certificates</h2>
             </section>
@@ -270,8 +287,8 @@
     <div class="contact">
         <h3 class="reveal-up">Lastly</h3>
         <h2 class="reveal-up">Contact me</h2>
-        <p class="reveal-up">If you are interested in working with me or asking for my help on a project, you are welcome to send me an email at <a>a.manrique742@gmail</a> and let me know!</p>
-        <a target="_blank" href="mailto:a.manrique742@gmail.com?subject=¡Saludos!&body=¡Hello!" class="contact-inv reveal-up">> Send me an email</a>
+        <p class="reveal-up">If you are interested in working with me or just want to ping me, you are welcome to send me an email at <a>a.manrique742@gmail</a> and let me know!</p>
+        <a target="_blank" href="mailto:a.manrique742@gmail.com?subject=Contact&body=Hi Alejandro!" class="contact-inv reveal-up">> Send me an email</a>
         <div class="contact-inv-underline reveal-up"></div>
     </div>
 
